@@ -1,3 +1,10 @@
+Sun Nov 08 11:21:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Implement query_cached() to return a
+	  query which returns the cached items for a given queryid, instead
+	  of the additional cached_query_str() parameter to search() - much
+	  more flexible.
+
 Sun Nov 08 11:20:27 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/cachemanager/__init__.py,xappy/cachemanager/xapian_manager.py:
